# jwt-auth

./: .gitignore  Cargo.toml  README.md  example.env
migrate/: bundle.sql  users.sql
migrations/: 0001_bundled.sql
src/: lib.rs  main.rs
src/handlers/users/: authenticate.rs  authorize.rs  login.rs  new.rs  refresh.rs
src/handlers/users/updating/password/: change.rs
src/handlers/users/updating/username/: change.rs
src/models/: appstate.rs  user.rs
src/util/: hash.rs  validation.rs
src/util/jwt/: claims.rs  generate.rs  validate.rs
tests/: validation.rs
