[package]
name = "jwt_auth"
version = "0.1.0"
edition = "2021"

[lib]
name = "jwt_auth_lib"
version = "0.1.0"
doc = true
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
axum =  { version = "0.8.2", features = ["tokio", "tower-log", "json", "macros"] }
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["macros", "postgres", "runtime-tokio-native-tls", "sqlx-postgres"] }
dotenv = "0.15.0"
uuid = { version = "1.12.1", features = ["serde", "v4"] }
chrono = "0.4.39"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
axum-macros = "0.5.0"
tower = "0.5.2"
async-trait = "0.1.85"
axum-extra = { version = "0.11.0", features = ["cookie", "cookie-private", "form"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
